crates/oxc_react_compiler/tests/snapshots/preserve-memo-validation__useMemo-constant-prop.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/preserve-memo-validation/useMemo-constant-prop.ts
---
import { c as _c } from "react/compiler-runtime";
// @validatePreserveExistingMemoizationGuarantees
import { useMemo } from "react";
import { identity } from "shared-runtime";
function useFoo(cond) {
	const $ = _c(5);
	const sourceDep = 0;
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		t0 = identity(0);
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	const derived1 = t0;
	const derived2 = cond ?? Math.min(0, 1) ? 1 : 2;
	let t1;
	if ($[1] === Symbol.for("react.memo_cache_sentinel")) {
		t1 = identity(0);
		$[1] = t1;
	} else {
		t1 = $[1];
	}
	const derived3 = t1;
	const derived4 = Math.min(0, -1) ?? cond ? 1 : 2;
	let t2;
	if ($[2] !== derived2 || $[3] !== derived4) {
		t2 = [
			derived1,
			derived2,
			derived3,
			derived4
		];
		$[2] = derived2;
		$[3] = derived4;
		$[4] = t2;
	} else {
		t2 = $[4];
	}
	return t2;
}
export const FIXTURE_ENTRYPOINT = {
	fn: useFoo,
	params: [true]
};
