crates/oxc_react_compiler/tests/snapshots/preserve-memo-validation__useMemo-infer-fewer-deps.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/preserve-memo-validation/useMemo-infer-fewer-deps.ts
---
import { c as _c } from "react/compiler-runtime";
// @validatePreserveExistingMemoizationGuarantees @validateExhaustiveMemoizationDependencies:false
import { useMemo } from "react";
// It's correct to produce memo blocks with fewer deps than source
function useFoo(a, b) {
	const $ = _c(2);
	let t0;
	if ($[0] !== a) {
		t0 = [a];
		$[0] = a;
		$[1] = t0;
	} else {
		t0 = $[1];
	}
	return t0;
}
export const FIXTURE_ENTRYPOINT = {
	fn: useFoo,
	params: [1, 2]
};
