crates/oxc_react_compiler/tests/snapshots/preserve-memo-validation__useMemo-infer-nonallocating.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/preserve-memo-validation/useMemo-infer-nonallocating.ts
---
// @validatePreserveExistingMemoizationGuarantees
import { useMemo } from "react";
// It's correct to infer a useMemo value is non-allocating
// and not provide it with a reactive scope
function useFoo(num1, num2) {
	return Math.min(num1, num2);
}
export const FIXTURE_ENTRYPOINT = {
	fn: useFoo,
	params: [2, 3]
};
