crates/oxc_react_compiler/tests/snapshots/preserve-memo-validation__useMemo-infer-scope-global.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/preserve-memo-validation/useMemo-infer-scope-global.ts
---
import { c as _c } from "react/compiler-runtime";
// @validatePreserveExistingMemoizationGuarantees @validateExhaustiveMemoizationDependencies:false
import { useMemo } from "react";
import { CONST_STRING0 } from "shared-runtime";
// It's correct to infer a useMemo block has no reactive dependencies
function useFoo() {
	const $ = _c(1);
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		t0 = [CONST_STRING0];
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	return t0;
}
export const FIXTURE_ENTRYPOINT = {
	fn: useFoo,
	params: []
};
